2007-09-10  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Use the id instead of SCPD URL of the service in the warning message.

2007-09-09  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Treat the error in the introspection callback as constant.

2007-09-08  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Retreive the service introspection, asynchronously.

2007-09-07  Zeeshan Ali  <zeenix@gstreamer.net>

	* AUTHORS:

	Add Lapo Calamandrei to AUTHORS file.

2007-09-07  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:
	* src/gupnp-universal-cp.glade:
	* src/network-light-gui.c:

	Polish the about dialog boxes.

2007-09-07  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/xml/network-light-desc.xml:

	Clean-up the network-light description document.

2007-09-07  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp.c:

	Don't display model description twice.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/network-light-gui.c:
	* src/network-light-upnp.c:
	* src/network-light-upnp.h:
	* src/network-light.c:

	- Put the UPnP code of network-light into a separate module.
	- Oops! forgot to add network-light.h to Makefile.am.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light.c:

	notify the clients of the actual load level set, not what is
	requested.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/network-light-gui.h:
	* src/network-light.c:
	* src/network-light.h:

	- Move the light status handling back to main module.
	- Notify the clients when the status changes from the UI.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Small stylistic change.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:

	Set the selection mode of all treeviews to GTK_SELECTION_SINGLE.

2007-09-06  Zeeshan Ali  <zeenix@gstreamer.net>
